add notebooks/signup and proxy in nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -17,7 +17,8 @@ events {
 
 http {
     include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    #default_type  application/octet-stream;
+    default_type  text/plain;
 
     client_body_temp_path nginx/client-body;
     proxy_temp_path nginx/proxy;
@@ -58,6 +59,26 @@ http {
         # redirect server error pages to the static page /50x.html
         #
         #error_page   500 502 503 504  /50x.html;
+
+        location ~ ^(?<path>/p/[0-9a-z]+/)signup$ {
+            proxy_pass http://localhost:5000;
+        }
+
+        location @dummy_proxy {
+            proxy_pass http://localhost:8888;
+        }
+
+        location /p/ {
+            if ($cookie_jupyter_port !~ ^[0-9]+$) {
+                return 403 'no jupyter_port';
+            }
+            proxy_set_header Host $host;
+            proxy_set_header Origin http://$host;
+            proxy_pass http://localhost:$cookie_jupyter_port;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
     }
 
 
