--- a/nginx.conf
+++ b/nginx.conf
@@ -64,17 +64,13 @@ http {
             proxy_pass http://localhost:5000;
         }
 
-        location @dummy_proxy {
-            proxy_pass http://localhost:8888;
-        }
-
         location /p/ {
             if ($cookie_jupyter_port !~ ^[0-9]+$) {
                 return 403 'no jupyter_port';
             }
             proxy_set_header Host $host;
             proxy_set_header Origin http://$host;
-            proxy_pass http://localhost:$cookie_jupyter_port;
+            proxy_pass http://[::1]:$cookie_jupyter_port;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
