--- a/nginx.conf
+++ b/nginx.conf
@@ -69,7 +69,7 @@ http {
                 return 403 'no jupyter_port';
             }
             proxy_set_header Host $host;
-            proxy_set_header Origin http://$host;
+            proxy_set_header Origin $scheme://$host;
             proxy_pass http://[::1]:$cookie_jupyter_port;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -94,23 +94,37 @@ http {
 
     # HTTPS server
     #
-    #server {
-    #    listen       443 ssl;
-    #    server_name  localhost;
+    server {
+        listen       5443 ssl;
+        server_name  localhost;
 
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
+        ssl_certificate      letsencrypt/fullchain.pem;
+        ssl_certificate_key  letsencrypt/privkey.pem;
 
-    #    ssl_session_cache    shared:SSL:1m;
-    #    ssl_session_timeout  5m;
+        ssl                  on;
+        ssl_protocols        TLSv1 TLSv1.1 TLSv1.2;
+        ssl_session_cache    shared:SSL:1m;
+        ssl_session_timeout  5m;
 
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers  on;
+        ssl_ciphers  HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
+        ssl_prefer_server_ciphers  on;
 
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
+        location / {
+            proxy_set_header        Host $host;
+            proxy_set_header        Origin $scheme://$host;
+            proxy_set_header        X-Real-IP $remote_addr;
+            proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header        X-Forwarded-Proto $scheme;
+            proxy_http_version      1.1;
+            proxy_set_header        Upgrade $http_upgrade;
+            proxy_set_header        Connection "upgrade";
+
+            # Fix the “It appears that your reverse proxy set up is broken" error.
+            proxy_pass          http://localhost:4999;
+            proxy_read_timeout  90;
+
+            proxy_redirect      http://localhost:4999 https://localhost:5443;
+        }
+    }
 
 }
