add user session

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@
 #user html;
 worker_processes  1;
 
-# nginx -p. -c nginx.conf [-s reload]
+# sudo -u html nginx -p. -c nginx.conf [-s reload]
 
 error_log  nginx/error.log;
 error_log  nginx/error.log  notice;
