--- a/nginx.conf
+++ b/nginx.conf
@@ -43,7 +43,7 @@ http {
     gzip  on;
 
     server {
-        listen       4999;
+        listen       5080;
         server_name  localhost;
 
         #charset koi8-r;
@@ -51,7 +51,7 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            proxy_pass http://localhost:5000;
+            proxy_pass http://localhost:5088;
         }
 
         #error_page  404              /404.html;
@@ -61,7 +61,7 @@ http {
         #error_page   500 502 503 504  /50x.html;
 
         location ~ ^(?<path>/p/[0-9a-z]+/)signup$ {
-            proxy_pass http://localhost:5000;
+            proxy_pass http://localhost:5088;
         }
 
         location /p/ {
@@ -96,7 +96,7 @@ http {
     #
     server {
         listen       5443 ssl;
-        server_name  localhost;
+        server_name  deepbeta.info;
 
         ssl_certificate      letsencrypt/fullchain.pem;
         ssl_certificate_key  letsencrypt/privkey.pem;
@@ -120,10 +120,10 @@ http {
             proxy_set_header        Connection "upgrade";
 
             # Fix the “It appears that your reverse proxy set up is broken" error.
-            proxy_pass          http://localhost:4999;
+            proxy_pass          http://localhost:5080;
             proxy_read_timeout  90;
 
-            proxy_redirect      http://localhost:4999 https://localhost:5443;
+            proxy_redirect      http://$host:5080 https://$host:5000;
         }
     }
 
