--- a/nginx.conf
+++ b/nginx.conf
@@ -68,8 +68,8 @@ http {
             if ($cookie_jupyter_port !~ ^[0-9]+$) {
                 return 403 'no jupyter_port';
             }
-            proxy_set_header Host $host;
-            proxy_set_header Origin $scheme://$host;
+            proxy_set_header Host $http_host;
+            proxy_set_header Origin $scheme://$http_host;
             proxy_pass http://[::1]:$cookie_jupyter_port;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -96,7 +96,7 @@ http {
     #
     server {
         listen       5443 ssl;
-        server_name  deepbeta.info;
+        server_name  _;
 
         ssl_certificate      letsencrypt/fullchain.pem;
         ssl_certificate_key  letsencrypt/privkey.pem;
@@ -109,9 +109,11 @@ http {
         ssl_ciphers  HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
         ssl_prefer_server_ciphers  on;
 
+        error_page 497  https://$http_host$request_uri;
+
         location / {
-            proxy_set_header        Host $host;
-            proxy_set_header        Origin $scheme://$host;
+            proxy_set_header        Host $http_host;
+            proxy_set_header        Origin $scheme://$http_host;
             proxy_set_header        X-Real-IP $remote_addr;
             proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header        X-Forwarded-Proto $scheme;
@@ -123,7 +125,7 @@ http {
             proxy_pass          http://localhost:5080;
             proxy_read_timeout  90;
 
-            proxy_redirect      http://$host:5080 https://$host:5000;
+            proxy_redirect      http://$host:5080 https://$http_host;
         }
     }
 
