--- a/nginx-jupyter.service
+++ b/nginx-jupyter.service
@@ -15,5 +15,8 @@ KillSignal=SIGQUIT
 KillMode=mixed
 WorkingDirectory=<workdir>
 
+Restart=always
+RestartSec=3
+
 [Install]
 WantedBy=multi-user.target
