--- a/nginx.conf
+++ b/nginx.conf
@@ -75,6 +75,10 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
         }
+
+        location /static/ {
+            root asset;
+        }
     }
 
 
