add static files folder

--- a/nginx.conf
+++ b/nginx.conf
@@ -76,8 +76,12 @@ http {
             proxy_set_header Connection "upgrade";
         }
 
+        location ~ ^/p/[0-9a-z]+/lab/static/(?<static_file>.*) {
+            rewrite /p/.* /static/$static_file permanent;
+	}
+
         location /static/ {
-            root asset;
+            alias asset/;
         }
     }
 
